// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HandWashComponent renders correctly when off shift 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  />
</View>
`;

exports[`HandWashComponent renders correctly when on shift 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#00A778",
          "borderRadius": 4,
          "flexDirection": "column",
          "justifyContent": "center",
          "margin": 20,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 17,
            "padding": 6,
          }
        }
      >
        Currently on shift and receiving reminders
      </Text>
    </View>
  </View>
</View>
`;
